--- a/conge.livingwithfcs.org/新爸五年计划 | 130 公立还是私立.html
+++ b/conge.livingwithfcs.org/新爸五年计划 | 130 公立还是私立.html
@@ -24,7 +24,7 @@ tags: 新爸五年计划 育儿 女儿 学校 小学</p>
 <p>美国这边的免费教育，是从kindergarten开始的。kindergarten是上小学前的一年，相当于中国所说的学前班。</p>
 <p>之前是Preschool，大概是对应幼儿园。以及Day care，也就是托儿所。Preschool和Day care，都是要家长掏钱的。另外，孩子是上幼儿园还是托儿所，一般是看年龄。三岁前托儿所，三岁后幼儿园。不过通常年龄不是一个硬指标。比如，如果孩子不能自己在大人的帮助下如厕，只会拉在纸尿裤里，即便年龄到了三岁，一般情况下Preschool也不会收的。</p>
 <p>Kindergarten，大概六岁就可以去上了。我的女儿已经到了要去上的年纪了。选公立，不用花钱。选私立，一个月得有一千多的支出。这一千多是属于便宜的。因为我妻子看中的这个学校，是合作社式的。也就是除了老师之外的几乎所有辅助性职位，都是由家长志愿付出时间来做，家长们自然不拿薪水，于是学校的行政和辅助性职位就无需花许多钱，因此每月的学费相对其他种类的私立学校并不是特别昂贵。</p>
-<p>对比了私立和公里学校，几点比较大的差别是，班级人数，人员构成，课间休息时间，教学方式和理念。</p>
+<p>对比了私立和公立学校，几点比较大的差别是，班级人数，人员构成，课间休息时间，教学方式和理念。</p>
 <p>私立学校是小班教学。每个班级14个人，由一位教师和一个课堂助理（家长志愿者）负责，相当于每七个孩子有一个大人负责，孩子能得到更多的支持。公立学校一般是一位教师负责二十几个学生，即便平均分配，也很难照顾到每个孩子的需求。</p>
 <p>私立学校有这么一个金钱壁垒，会阻挡贫困家庭的孩子。美国对家庭贫困的孩子提供免费午餐，这些孩子被称为lunchbox kids。有人声称Lunchbox kids多的班级，有行为问题的孩子也会多。老师的精力会被更多的放到维护课堂纪律，对于其他的孩子则无力照顾。</p>
 <p>公立学校的户外课间休息时间是按分钟计算的，每天两次，加在一起也就二十分钟。午饭时间也很短，要求孩子们短时间内就必须吃完。公立学校的活动，游戏和体育课时间都多出来许多。对于刚从幼儿园转到学前班的孩子，应该是比较好。</p>
