--- a/f2h2h1.github.io/开发Magento2的模块.html
+++ b/f2h2h1.github.io/开发Magento2的模块.html
@@ -42,7 +42,7 @@
 <li>新建路由，在 etc 文件夹下新建 frontend 文件夹，在 frontend 下新建 routes.xml 并写入以下内容<pre><code class="lang-xml"> &lt;?xml version="1.0"?&gt;
  &lt;config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:Module/etc/routes.xsd"&gt;
      &lt;router id="standard"&gt;
-         &lt;route id="local_dev" frontName="local_dev"&gt;
+         &lt;route id="localdev" frontName="localdev"&gt;
              &lt;module name="LocalDev_HelloModule" /&gt;
          &lt;/route&gt;
      &lt;/router&gt;
@@ -53,25 +53,53 @@
 <li>frontName 就是 route id</li>
 </ul>
 </li>
-<li>新建 Controller 和 action<ol>
+<li><p>新建 Controller 和 action</p>
+<ol>
 <li>在模块目录下新建 Controller 文件夹</li>
 <li>在 Controller 文件夹下，新建一个以控制器名称命名的文件名，例如 <code>Hello</code></li>
 <li>在 控制器 文件夹下，新建一个以方法名命名的文件，例如 <code>World.php</code></li>
-<li>在方法的文件里写入以下内容<pre><code class="lang-php"> &lt;?php
+<li><p>在方法的文件里写入以下内容</p>
+<pre><code class="lang-php"> &lt;?php
  namespace LocalDev\HelloModule\Controller\Hello;
  class World extends \Magento\Framework\App\Action\Action
  {
      public function __construct(
-         \Magento\Framework\App\Action\Context $context)
-         {
-             return parent::__construct($context);
+         \Magento\Framework\App\Action\Context $context,
+     ) {
+         parent::__construct($context);
      }
+
      public function execute()
      {
-         echo 'Hello World';
-         exit;
+         /** @var \Magento\Backend\Model\View\Result\Page $result */
+         $result = $this-&gt;resultFactory-&gt;create(\Magento\Framework\Controller\ResultFactory::TYPE_PAGE);
+         return $result;
      }
  }
+</code></pre>
+</li>
+</ol>
+</li>
+<li>新建视图<ol>
+<li>在模块目录下新建 view 文件夹</li>
+<li>在 view 文件夹下，新建一个 frontend 文件夹</li>
+<li>在 frontend 文件夹下，新建一个 layout 文件夹 和 一个 templates 文件夹</li>
+<li>在 layout 文件夹下，新建一个以路由命名的 xml 文件，例如 <code>localdev_hello_world.xml</code></li>
+<li>在 xml 文件里写入以下内容<pre><code class="lang-xml"> &lt;?xml version="1.0"?&gt;
+ &lt;page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd"&gt;
+     &lt;body&gt;
+         &lt;referenceContainer name="content"&gt;
+             &lt;block class="Magento\Framework\View\Element\Template" template="LocalDev_HelloModule::container.phtml" name="localdev.container"/&gt;
+         &lt;/referenceContainer&gt;
+     &lt;/body&gt;
+ &lt;/page&gt;
+</code></pre>
+</li>
+<li>在 templates 文件夹下，新建一个名为 <code>container.phtml</code> 的文件，这个文件名要和 xml 文件里的 template 属性对应</li>
+<li>在 phtml 文件里写入以下内容<pre><code class="lang-php"> &lt;?php
+ /** @var \Magento\Framework\View\Element\Template $block */
+ ?&gt;
+ &lt;p&gt;&lt;?=$block-&gt;getBaseUrl()?&gt;&lt;/p&gt;
 </code></pre>
 </li>
 </ol>
@@ -89,9 +117,21 @@
                     frontend
                         routes.xml
                     module.xml
+                view
+                    frontend
+                        layout
+                            localdev_hello_world.xml
+                        templates
+                            container.phtml
                 registration.php
 </code></pre>
-<p>启用模块和刷新缓存后，访问这样的链接 <code>http://localhost-magento/local_dev/hello/world</code> ，应该就能看到 <code>hello world</code> 的输出</p>
+<p>启用模块和刷新缓存后，访问这样的链接 <code>http://localhost-magento/localdev/hello/world</code> ，应该就能看到 <code>hello world</code> 的输出</p>
+&lt;!--
+前台的视图
+后台的视图
+lib\internal\Magento\Framework\App\FrontController.php
+--&gt;
+
 <h3>启用模块 和 刷新缓存</h3>
 <p>查看启用的模块</p>
 <pre><code>php bin/magento module:status
@@ -1389,7 +1429,7 @@ crontab/group_id/jobs/job_id/schedule/cron_expr
 crontab/reports/jobs/promotion_group_attribute/schedule/cron_expr
 这个可能是要重新部署才能生效，即使是改数据库，可能是一次缓存了
 
-
+输出全部的 cronjob
 /** @var \Magento\Cron\Model\Config\Data */
 $configData = $objectMamager-&gt;get(\Magento\Cron\Model\Config\Data::class);
 var_dump($configData-&gt;getJobs());
@@ -1612,9 +1652,25 @@ vendor\magento\framework\App\FrontController.php dispatchPreDispatchEvents
 
 <h2>新建一个后台视图</h2>
 <ol>
+<li>新建路由<ul>
+<li>在 etc 文件夹下新建 adminhtml 文件夹，在 adminhtml 下新建 routes.xml 并写入以下内容<pre><code class="lang-xml">  &lt;config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:App/etc/routes.xsd"&gt;
+      &lt;router id="admin"&gt;
+          &lt;route id="partnercode" frontName="partnercode"&gt;
+              &lt;module name="LocalDev_HelloModule" /&gt;
+          &lt;/route&gt;
+      &lt;/router&gt;
+  &lt;/config&gt;
+</code></pre>
+</li>
+</ul>
+</li>
 <li>视图是一个 xml 文件<ul>
 <li>视图的命名是根据路由来的</li>
-<li>例如 这样的视图名 partnercode_couponquota_index.xml 对应的路由就是 partnercode/couponquota/index</li>
+<li>例如<ul>
+<li>视图名是 partnercode_couponquota_index.xml 对应的路由是 partnercode/couponquota/index</li>
+<li>路由是 partnercode/couponquota/index 对应的控制器是 partnercode/Controller/Adminhtml/Couponquota/Index.php</li>
+</ul>
+</li>
 <li>视图文件一般放在这几个位置<ul>
 <li>后台的视图 模块/view/adminhtml/layout/视图名.xml</li>
 <li>前台的视图 模块/view/frontend/layout/视图名.xml</li>
@@ -1635,7 +1691,7 @@ vendor\magento\framework\App\FrontController.php dispatchPreDispatchEvents
 <li>block 要填完整的类名，如果不是自定义的 block ，就填 \Magento\Backend\Block\Template 或 \Magento\Framework\View\Element\Template</li>
 <li>name 可以随便填，但最好全局唯一</li>
 <li>template 填模板的路径，是 模块名::模板的相对路径，可以参考下面的例子<ul>
-<li>如果视图的绝对路径是 app\code\Vendor\Extension\view\adminhtml\layout\partnercode_couponquota_index.phtml</li>
+<li>如果视图的绝对路径是 app\code\Vendor\Extension\view\adminhtml\layout\partnercode_couponquota_index.xml</li>
 <li>如果模板的绝对路径是 app\code\Vendor\Extension\view\adminhtml\templates\coupon_quota\index.phtml</li>
 <li>那么在 template 里的值就填 Vendor_Extension::coupon_quota/index.phtml</li>
 </ul>
@@ -1656,6 +1712,7 @@ vendor\magento\framework\App\FrontController.php dispatchPreDispatchEvents
 <li>每个 block 会有一个模板对应，也就是 phtml 后缀的文件。<ul>
 <li>这是一个模板的例子<pre><code class="lang-php">  &lt;?php
   /** @var \Magento\Framework\View\Element\Template $block */
+  ?&gt;
   &lt;p&gt;&lt;?=$block-&gt;getBaseUrl()?&gt;&lt;/p&gt;
 </code></pre>
 </li>
@@ -1778,7 +1835,7 @@ vendor\magento\module-logging\Model\Processor.php:363
 可以这样获取配置的值</p>
 <pre><code class="lang-php">/** @var \Magento\Framework\App\Config\ScopeConfigInterface */
 $scopeConfig = \Magento\Framework\App\ObjectManager::getInstance()-&gt;get(Magento\Framework\App\Config\ScopeConfigInterface::class);
- $scopeConfig-&gt;getValue('general/file/bunch_size');
+$scopeConfig-&gt;getValue('general/file/bunch_size');
 </code></pre>
 <p>还可以用命令行来修改配置，这种修改会保存在数据库里
 <a href="https://experienceleague.adobe.com/docs/commerce-operations/configuration-guide/cli/configuration-management/set-configuration-values.html">https://experienceleague.adobe.com/docs/commerce-operations/configuration-guide/cli/configuration-management/set-configuration-values.html</a></p>
@@ -1924,19 +1981,19 @@ vendor\magento\module-theme\view\base\requirejs-config.js
 &lt;script&gt;
 var BASE_URL = 'https\u003A\u002F\u002Fshop\u002Dlocalhost-magento\u002F';
 var require = {
-    'baseUrl': 'https\u003A\u002F\u002Fshop\u002Dlocalhost-magento\u002Fstatic\u002Fversion1669169968\u002Ffrontend\u002Flocal_dev\u002Fstandard\u002Fen_US'
+    'baseUrl': 'https\u003A\u002F\u002Fshop\u002Dlocalhost-magento\u002Fstatic\u002Fversion1669169968\u002Ffrontend\u002Flocaldev\u002Fstandard\u002Fen_US'
 };
 &lt;/script&gt;
 
 这是第一个引入的 js 文件
 lib\web\requirejs\require.js
-pub\static\frontend\local_dev\standard\en_US\requirejs\require.js
+pub\static\frontend\localdev\standard\en_US\requirejs\require.js
 
 这是第二个引入的 js文件
-static/frontend/local_dev/standard/en_US/mage/requirejs/mixins.js
+static/frontend/localdev/standard/en_US/mage/requirejs/mixins.js
 
 这是第三个引入的 js文件
-static/frontend/local_dev/standard/en_US/requirejs-config.js
+static/frontend/localdev/standard/en_US/requirejs-config.js
 
 输出 requirejs 全部的配置项
 requirejs.s.contexts._.config
@@ -2061,6 +2118,9 @@ areaCode
 
 areaCode 的值在这个位置
 vendor\magento\framework\App\Area.php
+
+文档里没有提到 doc
+soap 的存在感比较低，似乎很少会用到
 
 https://developer.adobe.com/commerce/php/architecture/modules/areas/
 
@@ -2586,21 +2646,114 @@ EOF
 --&gt;
 
 <h2>发送邮件</h2>
+<h3>使用模板</h3>
+<ol>
+<li>在 etc 下新建 email_templages.xml 文件<pre><code class="lang-xml"> &lt;?xml version="1.0"?&gt;
+ &lt;config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:Magento_Email:etc/email_templates.xsd"&gt;
+     &lt;template id="self_check_order_confirmation_email" label="Self Check Order Confirmation Eamil" file="self_check_order_confirmation_email.html" type="html" module="LocalDev_HelloModule" area="adminhtml"/&gt;
+ &lt;/config&gt;
+</code></pre>
+</li>
+<li>在 view/area代码/email 下新建模板文件，文件名和area代码要和 email_templages.xml 里的对应<pre><code class="lang-html"> &lt;!--@subject {{var subject}}  @--&gt;
+ &lt;p&gt;{{var mail_content}}&lt;/p&gt;
+</code></pre>
+</li>
+<li><p>在 php 的代码里这样调用</p>
+<pre><code class="lang-php"> try {
+     require __DIR__ . '/app/bootstrap.php';
+     $bootstrap = \Magento\Framework\App\Bootstrap::create(BP, $_SERVER);
+     $objectManager = $bootstrap-&gt;getObjectManager();
+     $state = $objectManager-&gt;get(\Magento\Framework\App\State::class);
+     $state-&gt;setAreaCode(\Magento\Framework\App\Area::AREA_CRONTAB);
+
+     $appConfig = $objectManager-&gt;get(\Magento\Framework\App\Config\ScopeConfigInterface::class);
+     $transportBuilder = $objectManager-&gt;get(\Magento\Framework\Mail\Template\TransportBuilder::class);
+
+     $templateIdentifier = 'self_check_order_confirmation_email'; // 要和 email_templages.xml 里的 id 对应
+     $templateVars = [
+         'subject'   =&gt; '123',
+         'mail_content' =&gt; '321'
+     ];
+     $templateOptions = [
+         'area' =&gt; \Magento\Backend\App\Area\FrontNameResolver::AREA_CODE,  // 要和 email_templages.xml 里的 area代码 对应
+         'store' =&gt; \Magento\Store\Model\Store::DEFAULT_STORE_ID,
+     ];
+     $sender = [
+         'name' =&gt; $appConfig-&gt;getValue('trans_email/ident_general/name'),
+         'email' =&gt; $appConfig-&gt;getValue('trans_email/ident_general/email'),
+     ];
+     $transportBuilder
+         -&gt;setTemplateIdentifier($templateIdentifier)
+         -&gt;setTemplateVars($templateVars)
+         -&gt;setTemplateOptions($templateOptions)
+         -&gt;setFrom($sender);
+     $to = [
+         '001@example.com',
+         '002@example.com',
+         '003@example.com',
+     ];
+     foreach ($to as $item) {
+         $transportBuilder-&gt;addTo($item);
+     }
+     $transportBuilder-&gt;getTransport()-&gt;sendMessage();
+ } catch (\Throwable $e) {
+     echo $e-&gt;getFile() . ':' . $e-&gt;getLine() . PHP_EOL;
+     echo $e-&gt;getMessage() . PHP_EOL . $e-&gt;getTraceAsString();
+ }
+</code></pre>
+</li>
+</ol>
+<h3>不使用模板</h3>
+<pre><code class="lang-php">try {
+    $message = $objectManager-&gt;get(\Magento\Framework\Mail\Message::class);
+    $appConfig = $objectManager-&gt;get(\Magento\Framework\App\Config\ScopeConfigInterface::class);
+
+    $message-&gt;setSubject('Hello from Bing');
+    $message-&gt;setBodyHtml('&lt;p&gt;This is a test email sent by Bing using PHP mail function.&lt;/p&gt;');
+    // $message-&gt;setBodyText('This is a test email sent by Bing using PHP mail function.');
+    $message-&gt;setFromAddress(
+        $appConfig-&gt;getValue('trans_email/ident_general/email'),
+        $appConfig-&gt;getValue('trans_email/ident_general/name')
+    );
+
+    $to = [
+        '001@example.com',
+        '002@example.com',
+        '003@example.com',
+    ];
+    foreach ($to as $item) {
+        $message-&gt;addTo($item);
+    }
+
+    (new \Laminas\Mail\Transport\Sendmail())-&gt;send(
+        \Laminas\Mail\Message::fromString($message-&gt;getRawMessage())
+    );
+} catch (\Throwable $e) {
+    echo $e-&gt;getFile() . ':' . $e-&gt;getLine() . PHP_EOL;
+    echo $e-&gt;getMessage() . PHP_EOL . $e-&gt;getTraceAsString();
+}
+</code></pre>
+<h3>Transport</h3>
+<p>magento2 在默认情况下 使用 PHP 的 Sendmail 函数来发送邮件，就是调用系统里的 sendmail ，只能设置 host 和 port</p>
+<p>magento2.3 之后也支持 smtp 了，在这个位置设置，可以选择 sendmail 和 smtp</p>
+<pre><code>Stores &gt; Settings &gt; Configuration &gt; Advanced &gt; System &gt; Mail Sending Settings &gt; Transport
+</code></pre>
+<p>magento2.3 之前的版本可以用这个模块来实现 SMTP 发送邮件
+<a href="https://www.mageplaza.com/magento-2-smtp/">https://www.mageplaza.com/magento-2-smtp/</a></p>
+<p>magento2 使用这个库来发送邮件的
+<a href="https://github.com/laminas/laminas-mail">https://github.com/laminas/laminas-mail</a></p>
+<p>可以用这个仓库来测试邮件的发送</p>
+<pre><code>- https://github.com/axllent/mailpit
+- 启动命令
+    ```
+    mailpit --listen 127.0.0.1:8025 --smtp 127.0.0.1:25 --smtp-auth-accept-any
+    ```
+- 启动完后用浏览器访问 listen 的地址
+- sendmail 和 smtp 两种方式都可以用 mailpit 来测试， mailpit 可以忽略 smtp 的账号密码
+</code></pre>
 &lt;!--
-
-magento2 使用这个库来发送邮件的
-https://github.com/laminas/laminas-mail
-
-magento2 在默认情况下似乎不支持 SMTP 发送邮件
-可以用这个拓展来实现 SMTP 发送邮件
-https://www.mageplaza.com/magento-2-smtp/
-
-magento2 在默认情况下 使用 PHP 的 Sendmail 函数来发送邮件，就是调用系统里的 sendmail ，只能设置 host 和 port
-magento2 在 2.3 之后也支持 smtp 了
-在这个位置设置，可以选择 sendmail 和 smtp
-Stores &gt; Settings &gt; Configuration&gt; Advanced &gt; System &gt; Mail Sending Settings &gt; Transport
-
-
+mailpit 的版本是 v1.20
+邮件里如何加上附件？
 --&gt;
 
 <h2>一些调试技巧</h2>
@@ -3746,6 +3899,23 @@ FROM
 JOIN 
     sales_order_item on sales_order.entity_id = sales_order_item.order_id
 WHERE sales_order.entity_id = 28546;
+
+
+如果 http 头里存在这个字段 X-Requested-With ，而且这个字段的值是 XMLHttpRequest 那么这就是一个 ajax 请求
+在控制器里可以这样判断
+$isAjax = $this-&gt;getRequest()-&gt;isXmlHttpRequest() vendor\laminas\laminas-http\src\Request.php
+$isAjax = $this-&gt;getRequest()-&gt;isAjax() lib\internal\Magento\Framework\App\Request\Http.php
+    除了 isXmlHttpRequest 还会判断参数里有没有 ajax 或 isAjax
+    所以 isAjax() 应该会准确一些
+
+在控制器里可以像这样输出 json 字符串
+    public function execute()
+    {
+        /** @var \Magento\Framework\Controller\Result\Json $result */
+        $result = $this-&gt;resultFactory-&gt;create(\Magento\Framework\Controller\ResultFactory::TYPE_JSON);
+        return $result-&gt;setData(['isAjax' =&gt; $this-&gt;getRequest()-&gt;isAjax()]);
+    }
+
 
 
 --&gt;
