--- a/gitee.com/Kenneth-Lee-2012/MySummary/关于队列模型.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/关于队列模型.html
@@ -1,16 +1,16 @@
 <h2><a href="https://gitee.com/Kenneth-Lee-2012/MySummary/blob/master/软件构架设计/关于队列模型.rst">仓库源文</a></h2>
 <p>.. Kenneth Lee 版权所有 2024</p>
 <p>:Authors: Kenneth Lee
-:Version: 0.1
-:Date: 2024-09-10
-:Status: Draft</p>
+:Version: 0.2
+:Date: 2024-09-14
+:Status: Released</p>
 <p>关于队列模型</p>
 <hr/>
 <p>上周在一个内部讨论中讨论了一下调度模型，其中提到计算单元的调度并不是一种“调度
 器”个体的作用，而是调度算法的作用。用人的管理来理解，就是一个组织的人力调度大
 部分时候并非是某个管理者不断去安排每个人干什么，而是每个人按已经设计好的工作策
 略，按优先级一个一个完成任务，完成的任务通常也不需要回到某个“调度器”去请求安排
-下一个人物，而是把完成的任务交付给下个环节，然后自己取下一个任务去执行。</p>
+下一个任务，而是把完成的任务交付给下个环节，然后自己取下一个任务去执行。</p>
 <p>调度的精髓不是让调度者去介入，而是让被调度的对象花尽可能多的时间去做主要业务，
 而不是浪费时间去“调度”。</p>
 <p>所以，调度的核心在队列的管理上：我们给每类调度执行者一个队列，调度执行者从队列
@@ -35,7 +35,8 @@
 的深度其实主要受这个波峰和时延的限制，过浅的队列深度会导致单次溢出，过深的的队
 列导致过载检测滞后（队列已经收到超过处理能力的请求了，还在无限度地接受请求）。</p>
 <p>如果你只有一个处理单元，通常我们就需要一个队列。因为对于每个请求，你处理一半再
-换一个执行，除了改变优先级其实没有什么收益。什么时候你真的需要更多的队列呢？</p>
+换一个执行，除了改变优先级其实没有什么收益。</p>
+<p>所以，什么时候你真的需要更多的队列呢？</p>
 <p>这就变成一个速度匹配模型了：比如我们的目标对象是一个多核CPU，为了把整个处理过
 程并行化，我们到了可以并行的时候，就会把处理分成多个子任务，分解到多个子计算对
 象上，这样我们才能让整个调度模型并行起来。</p>
