--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -161,6 +161,7 @@ top: true</p>
 <p>Converting any layout you have to drag-to-swap layout: <a href="https://github.com/TahaSh/swapy">https://github.com/TahaSh/swapy</a></p>
 <p>Drag and drop for any experience on any tech stack: <a href="https://github.com/atlassian/pragmatic-drag-and-drop">https://github.com/atlassian/pragmatic-drag-and-drop</a></p>
 <p>Leaflet extension for various free tile providers: <a href="https://github.com/leaflet-extras/leaflet-providers">https://github.com/leaflet-extras/leaflet-providers</a></p>
+<p>Modular data visualization framework: <a href="https://github.com/f5/unovis">https://github.com/f5/unovis</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -205,6 +206,7 @@ top: true</p>
 <p>Drag and drop components that support Vue2 and Vue3: <a href="https://alfred-skyblue.github.io/vue-draggable-plus">https://alfred-skyblue.github.io/vue-draggable-plus</a></p>
 <p>Vue3 wrapper components for smooth-dnd: <a href="https://gilnd.github.io/vue3-smooth-dnd">https://gilnd.github.io/vue3-smooth-dnd</a></p>
 <p>Vue.js and Nuxt Tips, Tricks and good practice: <a href="https://vuejstips.com">https://vuejstips.com</a></p>
+<p>A type safe router for vuejs: <a href="https://github.com/kitbagjs/router">https://github.com/kitbagjs/router</a></p>
 <hr/>
 <h2>Browsers related</h2>
 <p>Google Chrome upcoming schedule: <a href="https://chromiumdash.appspot.com/schedule">https://chromiumdash.appspot.com/schedule</a></p>
