--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -115,7 +115,16 @@ function fetchVideo() {
     });
 }
 </code></pre>
-<p>You can use <code>AbortSignal.timeout()</code> to automatically create the abort signal which will abort after that duration (without the boilerplate of using <code>AbortController</code>).</p>
+<pre><code class="lang-js">const controller = new AbortController()
+
+controller.signal.addEventListener('abort', () =&gt; {
+  console.log(controller.signal.reason) // "user cancellation"
+})
+
+// Provide a custom reason to this abort.
+controller.abort('user cancellation')
+</code></pre>
+<p>You can use <code>AbortSignal.timeout()</code> to automatically create the abort signal which will abort after that duration. No need to create an <code>AbortController</code> if all you want is to cancel a request after it exceeds a timeout.</p>
 <pre><code class="lang-js">try {
   const res = await fetch(url, { signal: AbortSignal.timeout(5000) });
   const result = await res.blob();
@@ -243,6 +252,8 @@ console.log(myHeaders.get('X-Custom-Header')); // ['ProcessThisImmediately', 'An
 myHeaders.delete('X-Custom-Header');
 console.log(myHeaders.get('X-Custom-Header')); // null
 </code></pre>
+<blockquote><p><code>Content-Length</code> header indicates the size of the message body, in bytes. <code>Buffer.byteLength()</code> returns the byte length of those elements (a character can take up more than one byte).</p>
+</blockquote>
 <p>A fetch metadata request header like <code>Sec-Fetch-Dest</code>, <code>Sec-Fetch-Mode</code>, <code>Sec-Fetch-Site</code> provides additional information about the context from which the request originated. These headers are prefixed with <code>Sec-</code>, and hence have <a href="https://developer.mozilla.org/en-US/docs/Glossary/Forbidden_header_name">forbidden header names</a>. As such, they cannot be modified from JavaScript.</p>
 <ul>
 <li><code>Sec-Fetch-Mode</code> allows a server to distinguish between: requests originating from a user navigating between HTML pages, and requests to load images and other resources. For example, this header would contain <code>navigate</code> for top level navigation requests, while <code>no-cors</code> is used for loading an image.</li>
