--- a/kexizeroing.github.io/Server-sent events with examples.html
+++ b/kexizeroing.github.io/Server-sent events with examples.html
@@ -145,6 +145,7 @@ serve(async (_) =&gt; {
   });
 });
 </code></pre>
+<p><code>TextEncoder.encode()</code> is used to convert a string of text into a sequence of bytes using a specific encoding. It is used with APIs that expect encoded text. <code>TextDecoder</code> is the counterpart to <code>TextEncoder</code>. It's used to convert a sequence of bytes back into a string of text, like reading text from binary data sources.</p>
 <p><code>start(controller)</code> method is called immediately when the object is constructed. It aims to get access to the stream source, and do anything else required to set up the stream functionality. The <code>controller</code> parameter passed to this method can be used to control the stream's state and internal queue.</p>
 <p><code>cancel()</code> method will be called if the app signals that the stream is to be cancelled (e.g. if <code>ReadableStream.cancel()</code> is called).</p>
 <blockquote><p><a href="https://github.com/rexxars/eventsource-parser">eventsource-parser</a> is a streaming parser for server-sent events, without any assumptions about how the actual stream of data is retrieved. It simplifies the process of handling SSE data by providing functions to parse and handle the incoming messages.</p>
