--- a/kexizeroing.github.io/Unlock the power of Generative UI.html
+++ b/kexizeroing.github.io/Unlock the power of Generative UI.html
@@ -209,9 +209,8 @@ export default function Home() {
 <p>There is a <a href="https://www.youtube.com/watch?v=UDm-hvwpzBI">13 minute video</a> on how to build LLM applications through the new Vercel AI SDK.</p>
 <h3>More to explore</h3>
 <ul>
-<li><a href="https://sdk.vercel.ai/docs/ai-sdk-rsc">https://sdk.vercel.ai/docs/ai-sdk-rsc</a></li>
 <li><a href="https://chat.vercel.ai/">https://chat.vercel.ai/</a></li>
-<li><a href="https://gemini.vercel.ai/">https://gemini.vercel.ai/</a></li>
 <li><a href="https://github.com/miurla/morphic">https://github.com/miurla/morphic</a></li>
 <li><a href="https://github.com/krzysztoff1/generative-ui">https://github.com/krzysztoff1/generative-ui</a></li>
+<li><a href="https://github.com/TejasQ/gen-ui">https://github.com/TejasQ/gen-ui</a></li>
 </ul>
