--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8898 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8903 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/Implement%20a%20Trie.html>2024-09-19 Implement a Trie</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202437%20%E8%B7%91%E6%AD%A5%E9%80%94%E4%B8%AD%E5%8F%B3%E8%84%9A%E8%84%9A%E8%B8%9D%E7%97%9B%E4%BB%80%E4%B9%88%E5%8E%9F%E5%9B%A0%EF%BC%9F.html>2024-09-19 折返点 2437 跑步途中右脚脚踝痛什么原因？</a></li>
+
+<li><a href=conge.livingwithfcs.org/2024%20%E5%85%AB%E6%9C%88%E8%AF%BB%E6%94%BF%E6%B2%BB%EF%BC%8C%E8%A7%89%E9%86%92%EF%BC%8C%E5%8D%AB%E9%9D%92%EF%BC%8C%E8%8D%89%E6%B0%91%E2%80%A6%E2%80%A6%2006%20%E6%9C%AC.html>2024-09-19 2024 八月读政治，觉醒，卫青，草民…… 06 本</a></li>
+
+<li><a href=informal.top/Validated%20example%20of%20LLM%20acceleration.html>2024-09-19 Validated example of LLM acceleration</a></li>
+
+<li><a href=babyno.top/%E3%80%8C%E6%96%87%E9%A2%9C%E3%80%8DWindows%E7%89%88%E5%B7%B2%E5%8F%91%E5%B8%83.html>2024-09-18 「文颜」Windows版已发布</a></li>
 
 <li><a href=sund.site/%E7%A3%A8%E5%90%88.html>2024-09-16 磨合</a></li>
 
@@ -19,7 +29,7 @@
 
 <li><a href=informal.top/Weekly-%234%20First%20insight%20of%20LLM%20accelerate.html>2024-09-15 Weekly-#4 First insight of LLM accelerate</a></li>
 
-<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%2036%20-%20%E4%B8%80%E5%91%A8%E5%81%9A%E4%BA%86%E4%B8%A4%E6%AC%A1%E6%AF%94%E8%B5%9B%E4%B9%89%E5%B7%A5.html>2024-09-14 折返点 36 - 一周做了两次比赛义工</a></li>
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202436%20-%20%E4%B8%80%E5%91%A8%E5%81%9A%E4%BA%86%E4%B8%A4%E6%AC%A1%E6%AF%94%E8%B5%9B%E4%B9%89%E5%B7%A5.html>2024-09-14 折返点 2436 - 一周做了两次比赛义工</a></li>
 
 <li><a href=codeinchinese.com/%E3%80%8A%E9%BB%91%E7%A5%9E%E8%AF%9D%EF%BC%9A%E6%82%9F%E7%A9%BA%E3%80%8B%E9%9C%B8%E6%A6%9C%E5%85%A8%E7%90%83%E7%AC%AC%E4%B8%80%EF%BC%8C%E4%BB%8E%E6%B8%B8%E6%88%8F%E8%A1%8C%E4%B8%9A%E6%9D%A5%E7%9C%8B%EF%BC%8C%E9%BB%91%E6%82%9F%E7%A9%BA%E7%9A%84%E6%88%90%E5%8A%9F%E6%98%AF%E5%8F%AF%E4%BB%A5%E5%A4%8D%E5%88%B6%E7%9A%84%E5%90%97%EF%BC%9F.html>2024-09-12 《黑神话：悟空》霸榜全球第一，从游戏行业来看，黑悟空的成功是可以复制的吗？</a></li>
 
