--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -94,6 +94,7 @@ link.addEventListener('click', () =&gt; {
   // this === window
 })
 </code></pre>
+<p>Arrow functions are not free. When arrow functions are defined as class methods/properties, a new function object is created for each instance of the class. Most of the time, the decision between using arrow functions or regular methods in classes comes down to semantics and specific requirements around <code>this</code> binding. Unless we're in a very performance-critical scenario or creating a vast number of instances, the difference is likely negligible.</p>
 <h2>Closure</h2>
 <p>Lexical scoping describes how a parser resolves variable names when functions are nested. The word "lexical" refers to the fact that lexical scoping uses the location where a variable is declared within the source code to determine where that variable is available. Nested functions have access to variables declared in their outer scope.</p>
 <p><strong>A closure is the combination of a function and the lexical environment within which that function was declared.</strong> This environment consists of any local variables that were in-scope at the time the closure was created. Closures are useful because they let you associate data (the lexical environment) with a function that operates on that data.</p>
@@ -343,6 +344,7 @@ flower.bloom();  // after 1 second, triggers the 'declare' method
 <blockquote><p>If you inspect the <code>HTMLElement</code> prototype chain, you'll discover it inherits from <code>Element</code>, <code>Node</code> and <code>EventTarget</code>. Thanks to the <code>EventTarget</code> interface, you can subscribe to an element's DOM events via <code>addEventListener</code>.</p>
 </blockquote>
 <p>Unlike "native" events, which are fired by the DOM and invoke event handlers <strong>asynchronously</strong> via the event loop, <strong><code>dispatchEvent()</code> invokes event handlers synchronously</strong>. All applicable event handlers will execute and return before the code continues on after the call to <code>dispatchEvent()</code>.</p>
+<p><code>isTrusted</code> is a read-only property that is only set to true if the event was dispatched by the user agent, which means that it was triggered by the user, such as a copy event triggered by the user pressing <code>Cmd + C</code>. This is in contrast to a synthetic event programmatically dispatched via <code>dispatchEvent()</code>, where <code>e.isTrusted</code> is false.</p>
 <p>Events can be created with the <code>Event</code> constructor. This constructor is supported in most modern browsers. To add more data to the event object, the <code>CustomEvent</code> interface exists and the <code>detail</code> property can be used to pass custom data.</p>
 <pre><code class="lang-js">// Adding custom data
 const pizzaEvent = new CustomEvent("pizzaDelivery", {
@@ -383,6 +385,26 @@ button.addEventListener(
 );
 
 controller.abort();
+</code></pre>
+<pre><code class="lang-js">useEffect(() =&gt; {
+  const controller = new AbortController()
+
+  window.addEventListener('resize', handleResize, {
+    signal: controller.signal,
+  })
+  window.addEventListener('hashchange', handleHashChange, {
+    signal: controller.signal,
+  })
+  window.addEventListener('storage', handleStorageChange, {
+    signal: controller.signal,
+  })
+
+  return () =&gt; {
+    // Calling `.abort()` removes ALL event listeners
+    // associated with `controller.signal`.
+    controller.abort()
+  }
+}, [])
 </code></pre>
 <h2>Destructuring assignments</h2>
 <p>The destructuring assignment syntax is a JavaScript expression that makes it possible to unpack values from arrays, or properties from objects, into distinct variables.</p>
@@ -1080,10 +1102,15 @@ console.log(result);
 <li>The <code>await</code> keyword is only valid inside async functions.</li>
 <li>Use of <code>async / await</code> enables the use of ordinary <code>try / catch</code> blocks around asynchronous code.</li>
 </ul>
-<p>For example, this function returns a promise, and that promise resolves to the string "Hello world".</p>
-<pre><code class="lang-js">async function greeting() {
-  return "Hello world"
+<pre><code class="lang-js">// Helper buddy for removing async/await try/catch
+function safeAwait(promise) {
+  return promise.then(data =&gt; {
+    if (data instanceof Error) return [data]
+    return [null, data]
+  }).catch(err =&gt; [err])
 }
+
+// const [ err, data ] = await safeAwait(myPromise())
 </code></pre>
 <p>Now you should understand why the below code will throw an error. The <code>useEffect</code> hook isn't expecting us to return a promise. It expects us to return either nothing or a cleanup function. A quick fix is to create a separate async function within our effect.</p>
 <pre><code class="lang-js">React.useEffect(async () =&gt; {
